# dfkit

./: .pre-commit-config.yaml  LICENSE  README.md  prek.toml  pyproject.toml
dfchat/: __init__.py  app.py  state.py
dfchat/components/: __init__.py
dfchat/tabs/: __init__.py
dfchat/tool_modules/: __init__.py
examples/: README.md  diabetes-dataset.ipynb  diabetes_dataset_exploration.ipynb  logging_example.py
notebooks/: config.py  diabetes-dataset.ipynb  getting-started.ipynb
src/dfkit/: __init__.py  context.py  decision_tree_module.py  exceptions.py  logging.py  models.py  persistence.py  polars_utils.py  registry.py  sql_utils.py  tool_module.py  tool_module_context.py  toolkit.py
src/dfkit/decision_tree/: __init__.py  fitting.py  models.py  preprocessing.py  tool_module.py
src/dfkit/registry/: __init__.py  dataframe_context.py  dataframe_registry.py  identifier.py  models.py  persistence.py
src/dfkit/tool_modules/: __init__.py  models.py  tool_module.py  tool_module_context.py
src/dfkit/tool_modules/decision_tree/: __init__.py  fitting.py  models.py  preprocessing.py  tool_module.py
src/dfkit/utils/: __init__.py  exceptions.py  logging.py  polars_utils.py  sql_utils.py
tests/: __init__.py  test_context.py  test_decision_tree_fitting.py  test_decision_tree_module.py  test_decision_tree_preprocessing.py  test_exceptions.py  test_logging.py  test_persistence.py  test_polars_utils.py  test_sql_utils.py  test_tool_module.py  test_tool_module_context.py
tests/dfchat/: __init__.py  test_state.py
tests/test_decision_tree/: __init__.py  test_fitting.py  test_models.py  test_preprocessing.py  test_tool_module.py
tests/test_models/: __init__.py  test_dataframe_reference.py  test_dataframe_toolkit_state.py  test_tool_call_error.py
tests/test_registry/: __init__.py  test_dataframe_context.py  test_dataframe_reference.py  test_dataframe_toolkit_state.py  test_persistence.py
tests/test_tool_modules/: __init__.py  test_tool_call_error.py  test_tool_module.py  test_tool_module_context.py
tests/test_tool_modules/test_decision_tree/: __init__.py  test_fitting.py  test_models.py  test_preprocessing.py  test_tool_module.py
tests/test_toolkit/: __init__.py  test_registration.py  test_state.py  test_toolkit_integration.py  test_tools.py
tests/test_utils/: __init__.py  test_exceptions.py  test_logging.py  test_polars_utils.py  test_sql_utils.py
