[project]
name = "dfkit"
version = "0.1.0"
description = "A lightweight toolkit for connecting LangChain agents to dataframes, making it easy to ask natural language questions about your data."
readme = "README.md"
authors = [
    { name = "Nick Libertini", email = "libertini.nick@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.0",
    "langchain>=1.2.0",
    "langgraph>=1.0.7",
    "loguru>=0.7.0",
    "polars>=1.37.0",
    "pydantic>=2.12.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sqlglot[rs]>=28.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "langchain-anthropic>=1.3.1",
    "langchain-ollama>=1.0.1",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.12.0",
    "pydoclint>=0.8.0",
    "pytest>=9.0.0",
    "pytest-check>=2.6.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.14",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"


# pydoclint configuration
[tool.pydoclint]
style = "google"
skip-checking-short-docstrings = false
allow-init-docstring = true
exclude = '\.venv/|\\.git|\\.tox|tests/data'

# Pytest & coverage configuration
[tool.pytest.ini_options]
addopts = "-rf --doctest-modules --doctest-continue-on-failure --strict-markers"
cache_dir = "./build/pytest"
console_output_style = "progress"
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
  "src",
  "tests",
]

[tool.coverage.run]
branch = true
data_file = "build/.coverage"

[tool.coverage.report]
fail_under = 95
omit = [
]
exclude_also = [
    "def __repr__"
]
precision = 1
show_missing = true
skip_covered = true
skip_empty = true

# Ruff configuration
[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
line-length = 120
indent-width = 4
preview = true # Enable preview features.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "F",        # pyflakes
  "E", "W",   # pycodestyle
  "C90",      # mccabe max-complexity
  "I",        # isort
  "N",        # pep8-naming
  "D",        # pydocstyle
  "DOC",      # pydoclint
  "UP",       # pyupgrade
  "ANN",      # flake8-annotations
  "S",        # flake8-bandit
  "BLE",      # flake8-blind-except
  "FBT",      # flake8-boolean-trap
  "B",        # flake8-bugbear
  "A",        # flake8-builtins
  "C4",       # flake8-comprehensions
  "ISC",      # flake8-implicit-str-concat
  "ICN",      # flake8-import-conventions
  "Q",        # flake8-quotes
  "SIM",      # flake8-simplify 
  "TID",      # flake8-tidy-imports 
  "ARG",      # flake8-unused-arguments
  "PTH",      # flake8-use-pathlib
  "PL",       # pylint
  "RUF",      # Ruff-specific rules
]
ignore = [
  "ANN401",   # Allow any-type
  "ISC001",   # Ignore single-line-implicit-string-concatenation for ruff format
  "FBT003",   # Allow boolean pos values in func calls, like `dict.get(... True)`
]
per-file-ignores = {"**/{tests}/*" = [ 
  # Tests can use magic values, assertions, and relative imports
  "PLR2004", "S101", "TID252",
  # Tests can import private names
  "PLC2701",
  # Test classes can have methods that don't use self. Don't need to decorate as static.
  "PLR6301",
  # Test classes can have as many public methods as needed
  "PLR0904", 

]}
extend-unsafe-fixes = ["E", "F401"]

flake8-tidy-imports = {ban-relative-imports = "all"}
mccabe = {max-complexity = 5}
isort = {known-first-party = ["dfkit", "tests"]}
pydocstyle = {convention = "google"}
pylint = {allow-magic-value-types = ["int", "str"], max-args = 15, max-positional-args = 5, max-locals = 25}


## ty configuration
[tool.ty.src]
include = ["src", "tests"]
exclude = [".venv/"]


## uv configuration
[tool.uv]
exclude-newer = "7 days"
